--- a/graduationdata.html
+++ b/graduationdata.html
@@ -16,13 +16,13 @@
         <li class="nav-item">
           <a class="nav-link active" href="graduationdata.html">Info on Graduation Data</a>
 			<li class="nav-item">
-              <a class="nav-link" href="index2.html">test</a>
+              <a class="nav-link" href="salary.html">Salary by Major</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index3.html">test</a>
+              <a class="nav-link" href="leveleducationmajor.html">Level of education by Major</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="index4.html">test</a>
+              <a class="nav-link" href="occupationstatus.html">Current occupation Status by Major</a>
             </li>
         </li>
       </ul>
@@ -31,7 +31,7 @@
 <h1> About graduation data </h1>
 	<p class = "info"> 
 		<p> The data used in this web app is from the CORGIS Dataset Project and can be found <a href="https://corgis-edu.github.io/corgis/json/graduates/">here.</a> 
-The data contains information about college majors such as how much certain majors can make, the employment rate, and the number of degrees awarded to the people in the major during the listed year.
+The data contains information about college majors such as how much certain majors can make, the employment rate, the number of degrees awarded to the people in the major during the listed year, and other different types of data.
 The data from this dataset comes from the National Survey of Recent College Graduates. Because a lot of majors were not available before 2010, their data has not been recorded.
 One of the statistics recorded in this dataset was the mean salaries for the people who graduated with a certain degree. For example, the mean salary for someone with a degree in Chemistry in 1997 is $148,872 a year.
 Another statistic that this data contains is the reason for why people aren't working, such as complications with family, no jobs being available, or because they are still a student and are busy with their education. 
